# databoard

./: .gitignore  README.md  file3.magic  pyproject.toml
src/: freshdesk.py  github.py  productboard.py
